Name:                   tach-migration-routes
Version:                0.1.7
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Routes for the migration of data
Description:            Handles the reuqest for the migration of data and helps share the routes so route names are shared and compiled
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Migration.Routes
                      , Tach.Migration.Instances
                      , Tach.Migration.Routes.Types
  Other-Modules:        Tach.Migration.Routes.Internal
                        Tach.Migration.Foundation
  Build-Depends:        base >= 4 && < 5
                      , yesod == 1.2.5.2
                      , tach-impulse-series-types == 0.1.11
                      , tach-acid-impulse-lib == 0.2.4
                      , yesod-core == 1.2.15.1
                      , aeson == 0.7.0.6
                      , text       >= 0.11.3.1
                      , bytestring >= 0.10.0.2
                      , http-types == 0.8.4
                      , acid-state == 0.12.2
                      , tach-migration-acidic == 0.2.3
                      , containers == 0.5.5.1
                      , vector
                      , directed-keys == 0.2.1
                      , cereal == 0.4.0.1
                      , stm == 2.4.3
                      , filesystem-trees 
                      , utf8-string >= 0.3.7
                      , s3-simple == 0.2.0
                      , tach-periodic == 0.1.5
                      , wavelets == 0.1.7
                      , zlib == 0.5.4.1
                      , tach-transformable-types == 0.1.5
                      , yaml
                      , tach-migration-types == 0.2.1
                      , acid-cell == 0.1.12.1
                      , safecopy


                      -- == 0.1.0.5
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , yesod
                      , yesod-test
                      , yesod-core
                      , tach-migration-routes
                      , tach-impulse-series-types
                      , text
                      , aeson
                      , bytestring
                      , http-types
                      , acid-state
                      , acid-cell

executable         migration-app
    main-is:           Main.hs
    Default-Language:     Haskell2010
    hs-source-dirs:    src
    Build-Depends:      base
                      , cmdargs
                      , yesod
                      , tach-impulse-series-types
                      , tach-acid-impulse-lib
                      , yesod-core
                      , aeson
                      , text
                      , bytestring
                      , http-types
                      , acid-state
                      , tach-migration-acidic
                      , containers
                      , vector
                      , directed-keys
                      , cereal
                      , stm
                      , filesystem-trees
                      , utf8-string
                      , s3-simple
                      , tach-periodic
                      , wavelets
                      , zlib
                      , tach-transformable-types
                      , yaml
                      , tach-migration-types
                      , tach-migration-routes
                      , acid-cell
                      , safecopy
                      , warp
                      , system-filepath
                      , streaming-commons
                      , system-fileio
    ghc-options:       -threaded -O2 -rtsopts -Wall 
Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/tach.git
