Name:                   tach-migration-types
Version:                0.2.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Types for migrating
Description:            Keys and incomings for migration
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Migration.Types
  Other-Modules:        Tach.Migration.Types.Internal
  Build-Depends:        base >= 4 && < 5
                       ,directed-keys
                       ,cereal
                       ,bytestring

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/tach
