Name:                   tach-transformable-types
Version:                0.1.2
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Tranformable types for wavelets
Description:            Types that can be transformed to wavelet types mainly used for type extraction
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Transformable.Types
                        Tach.Transformable.Types.Transform
  Other-Modules:        Tach.Transformable.Types.Internal

  Build-Depends:        base >= 4 && < 5
                      , tach-impulse-series-types == 0.1.9
                      , tach-periodic == 0.1.2


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/tach
