Name:                   tach-transformable-types
Version:                0.1.7
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Tranformable types for wavelets
Description:            Types that can be transformed to wavelet types mainly used for type extraction
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Transformable.Types
                        Tach.Transformable.Types.Transform
                        Tach.Transformable.Types.Wavelet
                        Tach.Transformable.Types.Impulse
                        Tach.Transformable.Types.Wavelet.Core
  Other-Modules:        Tach.Transformable.Types.Internal

  Build-Depends:        base >= 4 && < 5
                      , tach-impulse-series-types >= 0.1.11
                      , tach-periodic >= 0.1.7
                      , wavelets >= 0.1.8
                      , containers >= 0.5.5.1
                      , tach-typeclasses >= 0.1.0
                      , bifunctors >= 4.1.1.1
                      , lens >= 4.2
                      , plow-extras-lens >= 0.1.0
                      , numeric-tools >= 0.2.0.1.7569
                      , vector
                      , statistics
                      , integration
                      , parallel


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , tach-impulse-series-types
                      , tach-periodic
                      , wavelets
                      , containers
                      , tach-typeclasses
                      , bifunctors
                      , lens
                      , plow-extras-lens
                      , numeric-tools
                      , vector
                      , statistics
                      , integration
                      , parallel
                      , random
                      , HUnit

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/tach
