Name:                   tach-typeclasses
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Class
                      , Tach.Class.Queryable
                      , Tach.Class.Periodic
                      , Tach.Types.Classify
                      , Tach.Types.Classify.Lens
                      , Tach.Class.Bounds
                      , Tach.Class.Insertable
                      , Tach.Class.Bounds.Foldable
                      , Tach.Class.Bounds.Bifoldable
  Other-Modules:        Tach.Class.Internal
  Build-Depends:        base >= 4 && < 5
                      , bifunctors >= 4.1.1.1
                      , containers >= 0.5.5.1
                      , lens >= 4.2
                      , profunctors >= 4.0.4

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
