Name:                   tach-wavelet-types
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Wavelet.Types
  Other-Modules:        Tach.Wavelet.Types.Internal
  Build-Depends:        base >= 4 && < 5
                      , tach-impulse-series-types >= 0.1.11
                      , template-haskell
                      , wavelets >= 0.1.8
                      , vector == 0.10.9.1
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
